# codex-thread-manager

./: .gitignore  CHANGELOG.md  LICENSE  Package.swift  README.md
Sources/CodexThreadManager/: AppDelegate.swift  MenuBarController.swift  ScriptLocator.swift  StatusIcon.swift
docs/: github-launch-kit.md
rust/codex_thread_manager/: Cargo.toml
rust/codex_thread_manager/src/: lib.rs  main.rs
scripts/: generate_app_icon.swift  install_bar_app.sh
