[package]
name = "codex_thread_manager"
version = "0.1.0"
edition = "2024"

[lib]
name = "codex_thread_manager"

[[bin]]
name = "codex_thread_manager"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.1"
rusqlite = { version = "0.37", features = ["backup"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
uuid = { version = "1.18", features = ["v4"] }
